NetBSD Problem Report #46793

From bernd@arresum.veego.de  Sat Aug 11 22:26:10 2012
Return-Path: <bernd@arresum.veego.de>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	by www.NetBSD.org (Postfix) with ESMTP id B1E6363B85F
	for <gnats-bugs@gnats.netbsd.org>; Sat, 11 Aug 2012 22:26:10 +0000 (UTC)
Message-Id: <20120811222547.CA1A88AB65@arresum.veego.de>
Date: Sun, 12 Aug 2012 00:25:47 +0200 (CEST)
From: Bernd Ernesti <pr201203@veego.de>
Reply-To: Bernd Ernesti <pr201203@veego.de>
To: gnats-bugs@gnats.NetBSD.org
Subject: Can not compile libterminfo
X-Send-Pr-Version: 3.95

>Number:         46793
>Category:       lib
>Synopsis:       Can not compile libterminfo
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    lib-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Aug 11 22:30:00 +0000 2012
>Closed-Date:    Wed Jun 01 04:12:07 +0000 2016
>Last-Modified:  Wed Jun 01 04:12:07 +0000 2016
>Originator:     Bernd Ernesti
>Release:        NetBSD 6.0_BETA2
>Organization:

>Environment:
System: NetBSD 6.0_BETA2
Architecture: i386
Machine: i386
>Description:

A normal build fails in src/lib/libterminfo and src/tests/lib/libcurses

 dependall ===> libterminfo
 Generating terminfo hash
 .
 Generating termcap hash
 .....
 ..
 make: don't know how to make tic. Stop

src/lib/libterminfo/Makefile.hash contains this:
 compiled_terms.c: ${TOOL_TIC}
and src/tests/lib/libcurses/Makefile
 ${TERMINFO_DB}.cdb: ${TOOL_TIC} ${TEST_TERMINFO}

So the define from /usr/share/mk/bsd.own.mk can not work with USETOOLS != yes:
 /usr/share/mk/bsd.own.mk:TOOL_TIC= tic

Additionally src/lib/libterminfo/genterms will not work if
you do not have your source code in /usr/src. It needs a patch to
set NETBSDSRCDIR in src/lib/libterminfo/Makefile.hash.

>How-To-Repeat:

Use
 USETOOLS = never
 MKTOOLS = no

cd src/lib/libterminfo
make dependall

>Fix:

No idea how to deal with the tic issue, but for genterms::

Index: Makefile.hash
===================================================================
RCS file: /cvsroot/src/lib/libterminfo/Makefile.hash,v
retrieving revision 1.4.4.1
diff -b -u -r1.4.4.1 Makefile.hash
--- Makefile.hash	23 Jun 2012 22:54:57 -0000	1.4.4.1
+++ Makefile.hash	11 Aug 2012 22:07:25 -0000
@@ -1,6 +1,7 @@
 #	$NetBSD: Makefile.hash,v 1.4.4.1 2012/06/23 22:54:57 riz Exp $

 SCRIPT_ENV=	\
+	NETBSDSRCDIR=${NETBSDSRCDIR:Q} \
 	TOOL_AWK=${TOOL_AWK:Q} \
 	TOOL_NBPERF=${TOOL_NBPERF:Q} \
 	TOOL_SED=${TOOL_SED:Q} \

>Release-Note:

>Audit-Trail:
From: "Roy Marples" <roy@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/46793 CVS commit: src/lib/libterminfo
Date: Thu, 24 Jan 2013 14:17:40 +0000

 Module Name:	src
 Committed By:	roy
 Date:		Thu Jan 24 14:17:40 UTC 2013

 Modified Files:
 	src/lib/libterminfo: Makefile.hash

 Log Message:
 Fix building our terminals with a non standard NETBSDSRCDIR, PR lib/46793.
 Thanks to Bernd Ernesti.


 To generate a diff of this commit:
 cvs rdiff -u -r1.6 -r1.7 src/lib/libterminfo/Makefile.hash

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/46793 CVS commit: [netbsd-6] src
Date: Thu, 14 Mar 2013 15:48:29 +0000

 Module Name:	src
 Committed By:	riz
 Date:		Thu Mar 14 15:48:29 UTC 2013

 Modified Files:
 	src/lib/libterminfo [netbsd-6]: Makefile.hash genman term.h
 	    term_private.h terminfo.3 terminfo.5.in tparm.c
 	src/usr.bin/tput [netbsd-6]: Makefile tput.c

 Log Message:
 Pull up following revision(s) (requested by roy in ticket #835):
 	lib/libterminfo/terminfo.3: revision 1.9
 	lib/libterminfo/term.h: revision 1.13
 	lib/libterminfo/term.h: revision 1.14
 	usr.bin/tput/Makefile: revision 1.11
 	lib/libterminfo/terminfo.3: revision 1.10
 	lib/libterminfo/genman: revision 1.5
 	lib/libterminfo/term_private.h: revision 1.11
 	usr.bin/tput/tput.c: revision 1.23
 	usr.bin/tput/tput.c: revision 1.24
 	usr.bin/tput/tput.c: revision 1.25
 	lib/libterminfo/tparm.c: revision 1.11
 	lib/libterminfo/Makefile.hash: revision 1.7
 	usr.bin/tput/tput.c: revision 1.26
 	lib/libterminfo/tparm.c: revision 1.12
 	lib/libterminfo/tparm.c: revision 1.13
 	lib/libterminfo/tparm.c: revision 1.14
 	lib/libterminfo/terminfo.5.in: revision 1.18
 As tparm accepts longs we should treat them as long during expansion.
 Also, fix the ~ and ! logic.
 Move the strings vs long analysis to a private function, but allow
 tput(1) to use it so we can work with string parameters to
 capabilities.
 Fix building our terminals with a non standard NETBSDSRCDIR, PR
 lib/46793.
 Thanks to Bernd Ernesti.
 Remove debug accidently commited.
 If char * > long then print a suitable error when passing a string
 parameter.
 For platforms where we cannot fit a char * into a long, return NULL
 and set errno to ENOTSUPP.
 Add descriptions for terminfo keys to term.h
 These are extracted by genman and placed into the compiled terminfo.5
 Fixes PR lib/47090
 Provide a disabled implentation of tlparm and ti_tlparm for
 completeness.
 This also improves the readability of _ti_tiparm.
 Use putp(3) to output our strings.
 Fixes PR lib/47532


 To generate a diff of this commit:
 cvs rdiff -u -r1.4.4.1 -r1.4.4.2 src/lib/libterminfo/Makefile.hash
 cvs rdiff -u -r1.4 -r1.4.8.1 src/lib/libterminfo/genman
 cvs rdiff -u -r1.10.4.2 -r1.10.4.3 src/lib/libterminfo/term.h
 cvs rdiff -u -r1.9.4.1 -r1.9.4.2 src/lib/libterminfo/term_private.h
 cvs rdiff -u -r1.8 -r1.8.4.1 src/lib/libterminfo/terminfo.3
 cvs rdiff -u -r1.15.6.1 -r1.15.6.2 src/lib/libterminfo/terminfo.5.in
 cvs rdiff -u -r1.7.4.2 -r1.7.4.3 src/lib/libterminfo/tparm.c
 cvs rdiff -u -r1.10 -r1.10.8.1 src/usr.bin/tput/Makefile
 cvs rdiff -u -r1.22 -r1.22.4.1 src/usr.bin/tput/tput.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: pgoyette@NetBSD.org
State-Changed-When: Wed, 01 Jun 2016 04:12:07 +0000
State-Changed-Why:
Fix committed on Jan 24 14:17:40 UTC 2013 by roy@


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.49 2026/05/14 01:52:41 riastradh Exp $
$NetBSD: gnats_config.sh,v 1.10 2026/05/13 22:00:09 riastradh Exp $
Copyright © 1994-2026 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.