Pull up following revision(s) (requested by roy in ticket #835): 	lib/libterminfo/terminfo.3: revision 1.9 	lib/libterminfo/term.h: revision 1.13 	lib/libterminfo/term.h: revision 1.14 	usr.bin/tput/Makefile: revision 1.11 	lib/libterminfo/terminfo.3: revision 1.10 	lib/libterminfo/genman: revision 1.5 	lib/libterminfo/term_private.h: revision 1.11 	usr.bin/tput/tput.c: revision 1.23 	usr.bin/tput/tput.c: revision 1.24 	usr.bin/tput/tput.c: revision 1.25 	lib/libterminfo/tparm.c: revision 1.11 	lib/libterminfo/Makefile.hash: revision 1.7 	usr.bin/tput/tput.c: revision 1.26 	lib/libterminfo/tparm.c: revision 1.12 	lib/libterminfo/tparm.c: revision 1.13 	lib/libterminfo/tparm.c: revision 1.14 	lib/libterminfo/terminfo.5.in: revision 1.18 As tparm accepts longs we should treat them as long during expansion. Also, fix the ~ and ! logic. Move the strings vs long analysis to a private function, but allow tput(1) to use it so we can work with string parameters to capabilities. Fix building our terminals with a non standard NETBSDSRCDIR, PR lib/46793. Thanks to Bernd Ernesti. Remove debug accidently commited. If char * > long then print a suitable error when passing a string parameter. For platforms where we cannot fit a char * into a long, return NULL and set errno to ENOTSUPP. Add descriptions for terminfo keys to term.h These are extracted by genman and placed into the compiled terminfo.5 Fixes PR lib/47090 Provide a disabled implentation of tlparm and ti_tlparm for completeness. This also improves the readability of _ti_tiparm. Use putp(3) to output our strings. Fixes PR lib/47532